z-index -1 for thead:after element Fixes #1

--- a/src/searchable.scss
+++ b/src/searchable.scss
@@ -36,7 +36,7 @@
       position: absolute;
       text-align: center;
       width: 100%;
-      z-index: 1;
+      z-index: -1;
     }
 
     input[type='search'] {
